# sigtekx

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE_REFACTOR_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  README.md  SIGTEKX-RENAME-SUMMARY.md  WORKFLOW_GUIDE.md  accuracy_debug_plan.md  cli.ps1  cli.sh  code_review_guide.md  debug_cuda.sh  dvc.yaml  environment.linux.yml  environment.win.yml  environment.yml  modern-toolchain.md  pyproject.toml  pyproject.toml.backup-2025-12-03  pytest.ini  requirements.txt  run_complete_study.py  setup.py  start-devshell-x64.ps1  validate_warmup_impact.py
.github/workflows/: ci.yml
.guide/: README.md  cuda_fft.cu  cuda_fft.h
analysis overhaul/: MIGRATION_GUIDE.md  README.md  __init__.py  analyze_enhanced.py  engine.py  example_usage.py  models.py  requirements.txt  visualization.py
baselines/: .baseline_manifest.json  README.md
benchmarks/: run_accuracy.py  run_latency.py  run_realtime.py  run_throughput.py
bindings/: README.md  bindings.cpp
cpp/: arch-refactor-plan.md
cpp/benchmarks/: README.md  baseline_cli.cpp  benchmark_config.hpp  benchmark_engine.cpp  benchmark_formatters.hpp  benchmark_persistence.hpp  benchmark_results.hpp  benchmark_runners.hpp  cli_parser.hpp  dataset_cli.cpp  main.cpp  reference_compute.hpp  signal_generator.hpp
cpp/bindings/: README.md  bindings.cpp
cpp/src/: README.md  ops_fft.cu  processing_stage.cpp  profiling_nvtx.cu  research_engine.cpp
cpp/tests/: test_batch_executor.cpp  test_nvtx_profiling.cpp  test_pipeline_builder.cpp  test_processing_stage.cpp  test_realtime_executor.cpp  test_research_engine.cpp  test_window_functions.cpp
docs/: API.md  ARCHITECTURE.md  BENCHMARKING.md  BENCHMARKS.md  BUFFER_SYNCHRONIZATION_FIX.md  CREATING_ISSUES.md  DEVELOPMENT.md  INSTALL.md  README.md  RENAME-TO-SIGTEKX-GUIDE.md  benchmark-timing-strategies.md  cloud-deployment.md  gpu-clock-locking.md  spectrogram_pipeline_guide.md
docs/architecture/: executors.md  overview.md  project-structure.md  python-package-structure.md  thread-safety.md
docs/aws/: aws-cloud-architecture.md  cloud-deployment.md
docs/benchmarking/: README.md  csv-file-organization.md  experiment-guide.md  experiment-logging-system.md  rtf-convention-mapping.md  thermal-degradation-protocol.md  warmup-methodology.md
docs/cpp/: baseline-system.md  dataset-system.md
docs/development/: cpp-optimization-analysis.md  methods-paper-roadmap.md  phase1-readiness-audit.md  project-evaluation-feb2026.md
environments/: environment.build.yml  environment.linux.yml  environment.runtime.yml  environment.win.yml
examples/: architecture_demo.cpp  generate_test_spectrogram.py
experiments/: EXPERIMENT_COVERAGE.md  README.md  Snakefile  check_progress.py
notebooks/: aws_anomaly_detection.ipynb
pypi-placeholder/: PUBLISH.md  README.md  pyproject.toml
python/: README.md  code_review_guide.md  pyproject.toml  setup.py
python/.guide/: README.md
python/.guide/demos/: README.md  demo_01_hello_fft.py  demo_02_live_spectrum.py  demo_03_performance_scaling.py  demo_04_batch_file_processing.py  demo_05_music_visualizer.py
python/benchmarks/: fft_batch_scaling.py  fft_graphs_comp.py  fft_raw.py  fft_realtime.py
python/benchmarks/fft/: batch_scaling.py  graphs_comparison.py  raw_throughput.py  realtime.py  utils.py  verify_accuracy.py
python/ionosense_hpc/: __init__.py
python/ionosense_hpc/core/: engine.py  metrics.py
python/src/ionosense_hpc/: __init__.py  __version__.py  exceptions.py
python/src/ionosense_hpc/benchmarks/: __init__.py  accuracy.py  base.py  latency.py  realtime.py  reporting.py  research_workflow.py  suite.py  sweep.py  throughput.py
python/src/ionosense_hpc/benchmarks/configs/: latency_config.yaml  suite_config.yaml  sweep_experiment.yaml
python/src/ionosense_hpc/config/: __init__.py  presets.py  schemas.py  validation.py
python/src/ionosense_hpc/core/: __init__.py  _engine.cp311-win_amd64.pyd  buffers.py  config.py  engine.py  exceptions.py  fft_processor.py  pipeline.py  pipelines.py  processor.py  profiling.py  raw_engine.py  signals.py
python/src/ionosense_hpc/stages/: __init__.py  definitions.py  registry.py
python/src/ionosense_hpc/testing/: __init__.py  fixtures.py  validators.py
python/src/ionosense_hpc/utils/: __init__.py  archiving.py  benchmark_utils.py  config.py  console.py  data_export.py  device.py  logging.py  paths.py  profiling.py  reporting.py  reproducibility.py  signals.py  validation.py
python/tests/: conftest.py  test_benchmarks.py  test_buffers.py  test_config.py  test_engine.py  test_exceptions.py  test_fft_processor.py  test_fixtures.py  test_integration.py  test_logging.py  test_pipeline.py  test_processor.py  test_raw_engine.py  test_signals.py  test_stages.py  test_validation.py
scripts/: README.md  baseline_helper.py  cli-cpp.ps1  cli-cpp.sh  cli.ps1  cli.sh  cli_old.ps1  create-dev-shortcut.ps1  gpu-clocks.json  gpu-manager-elevated.ps1  gpu-manager.sh  init_bash.sh  init_pwsh.ps1  open_dev_pwsh.ps1  prof_helper.py  refactor_batch_to_channels.py  start-devshell-x64.ps1
src/: README.md  fft_engine.cpp  ops_fft.cu  pipeline_engine.cpp  processing_stage.cpp  profiling_nvtx.cu  research_engine.cpp
tests/: CMakeLists.txt  conftest.py  test_api.py  test_archiving.py  test_baseline_concurrency.py  test_benchmarks.py  test_bindings_zerocopy.py  test_config.py  test_csv_multirun_safety.py  test_cuda_wrappers.cpp  test_dataset_concurrency.py  test_device.py  test_engine.py  test_engine_cleanup.py  test_engine_cleanup_integration.py  test_engine_config_overrides.py  test_exceptions.py  test_fft.cpp  test_fft.py  test_fft_engine.cpp  test_fixtures.py  test_logging.py  test_nvtx_profiling.cpp  test_paths.py  test_pipeline_engine.cpp  test_processing_stage.cpp  test_profiling.py  test_research_engine.cpp  test_runtime_info.py  test_signals.py  test_spectrogram.py  test_stage_config.py  test_stage_metrics.py  test_stages.py  test_unified_api.py  test_validation.py  test_validators.py
(+384 files in other folders)
